Re-arrange template

--- a/template.qmd
+++ b/template.qmd
@@ -1,9 +1,9 @@
 ---
 title: "AAGI"
 author: "AAGI.org"
+date: last-modified
 format:
-  revealjs:
-    css: assets/css/AAGI.css
+  aagi-revealjs: default
 ---
 
 ## Quarto
@@ -26,3 +26,6 @@ When you click the **Render** button a presentation will be generated that inclu
 ```
 
 
+## More Information
+
+You can learn more about controlling the appearance of RevealJS output here: <https://quarto.org/docs/presentations/revealjs/>
