--- a/template.qmd
+++ b/template.qmd
@@ -6,6 +6,34 @@ format:
   aagi-revealjs: default
 ---
 
+```{r}
+#| label: load
+#| message: false
+
+
+if (!require("remotes")) {
+  install.packages("remotes")
+}
+
+if (!require("AAGIThemes")) {
+  remotes::install_git("https://github.com/AAGI-Org-AU-Public/AAGIThemes",
+    build_vignettes = TRUE
+  )
+}
+
+library(ggplot2)
+library(theme.aagi)
+library(flextable)
+
+# set ggplot2 theme
+theme_set(theme_aagi())
+
+# set flextable theme
+set_flextable_defaults(
+  theme_fun = theme_ft_aagi
+)
+```
+
 ## Quarto
 
 Quarto enables you to weave together content and executable code into a finished presentation. To learn more about Quarto presentations see <https://quarto.org/docs/presentations/>.
