update repo urls w/ new org name

--- a/aagi-template-revealjs.qmd
+++ b/aagi-template-revealjs.qmd
@@ -14,11 +14,11 @@ highlight-style: breeze
 if (!require("pak")) install.packages("pak")
 
 if (!require("AAGIPalettes")) {
-  pak::pkg_install("AAGI-Org-AU-Public/AAGIPalettes")
+  pak::pkg_install("AAGI-AUS/AAGIPalettes")
 }
 
 if (!require("AAGIThemes")) {
-  pak::pkg_install("AAGI-Org-AU-Public/AAGIThemes")
+  pak::pkg_install("AAGI-AUS/AAGIThemes")
 }
 
 if (!require("gapminder")) {
@@ -103,10 +103,10 @@ ggplot() +
 
 You can learn more about controlling the appearance of RevealJS output here: <https://quarto.org/docs/presentations/revealjs/>
 
-<!-- This background won't show properly in the example rendered slide, but when used with `quarto use template AAGI-Org-AU-Public/AAGIQuarto`
+<!-- This background won't show properly in the example rendered slide, but when used with `quarto use template AAGI-AUS/AAGIQuarto`
 you will have the closing slide display the same image as the title slide under "Thank You" (or the H1 text of your choosing)
 -->
-# Thank You{background-image="_extensions/AAGI-Org-AU-Public/aagi/title-slide-main.png" background-size="1050px auto" background-position="50% 85%"}
+# Thank You{background-image="_extensions/AAGI-AUS/aagi/title-slide-main.png" background-size="1050px auto" background-position="50% 85%"}
 
 <!-- Uncomment if you have a bibliography
 ## References 
