--- a/aagi-template-revealjs.qmd
+++ b/aagi-template-revealjs.qmd
@@ -78,9 +78,13 @@ gt
 [{AAGIThemes}](https://github.com/AAGI-AUS/AAGIThemes) also provides support for theming basic figures in R, for example.
 
 ```{r}
+#| label: graphics-figure
+#| message: false
 library(AAGIThemes)
 plot_aagi(pressure)
 ```
+
+
 ## Figures with {ggplot2}
 
 [{AAGIThemes}](https://github.com/AAGI-AUS/AAGIThemes) also provides support for theming [{ggplot2}](https://ggplot2.tidyverse.org) outputs in R, for example.
