clean up column text and style aside text

--- a/aagi-template-revealjs.qmd
+++ b/aagi-template-revealjs.qmd
@@ -84,6 +84,9 @@ library(AAGIThemes)
 plot_aagi(pressure)
 ```
 
+::: aside
+This is an aside.
+:::
 
 ## Figures with {ggplot2}
 
@@ -137,123 +140,6 @@ This is a column on the left.
 
 ::: {.column width="50%"}
 This is a column on the right.
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
-
-to
-much 
-text
 :::
 ::::
 
