fix path to resources

--- a/_extensions/aagi/PDF/AAGI_template.tex
+++ b/_extensions/aagi/PDF/AAGI_template.tex
@@ -71,8 +71,8 @@
 % Header and footer
 \usepackage[automark]{scrlayer-scrpage}
 \clearpairofpagestyles
-\ohead{\includegraphics[width=1.8cm, height=0.94cm]{assets/AAGI_logo.pdf}}
-\cfoot{\includegraphics{assets/Partners.pdf}\\
+\ohead{\includegraphics[width=1.8cm, height=0.94cm]{/AAGI_logo.pdf}}
+\cfoot{\includegraphics{Partners.pdf}\\
 	\begin{FlushRight}
 		\textbf{\pagemark} \textbf{|} \textcolor{pagenum}{Page}
 	\end{FlushRight}
@@ -80,7 +80,7 @@
 
 \newpairofpagestyles[scrheadings]{Title_page}{
 	\clearpairofpagestyles
-	\cfoot{\includegraphics[width=\linewidth]{assets/Partners.pdf}}
+	\cfoot{\includegraphics[width=\linewidth]{Partners.pdf}}
 }
 
 %Set the font
@@ -103,7 +103,7 @@ $pandoc.tex()$
 		\vspace*{-2cm}
 		
 		\begin{center}
-			\includegraphics[height=3cm]{assets/AAGI_logo.pdf}    
+			\includegraphics[height=3cm]{AAGI_logo.pdf}
 		\end{center}
 		
 		\vfill
