fix filepath to AAGI_logo.pdf

--- a/_extensions/aagi/PDF/AAGI_template.tex
+++ b/_extensions/aagi/PDF/AAGI_template.tex
@@ -71,7 +71,7 @@
 % Header and footer
 \usepackage[automark]{scrlayer-scrpage}
 \clearpairofpagestyles
-\ohead{\includegraphics[width=1.8cm, height=0.94cm]{/AAGI_logo.pdf}}
+\ohead{\includegraphics[width=1.8cm, height=0.94cm]{AAGI_logo.pdf}}
 \cfoot{\includegraphics{Partners.pdf}\\
 	\begin{FlushRight}
 		\textbf{\pagemark} \textbf{|} \textcolor{pagenum}{Page}
