--- a/_extensions/aagi/short_report/AAGI_short_report.tex
+++ b/_extensions/aagi/short_report/AAGI_short_report.tex
@@ -1,3 +1,6 @@
+% original file from https://github.com/AAGI-AUS/AAGITemplates/blob/master/inst/rmarkdown/templates/AAGI_short_report/skeleton/assets/AAGI_markdown.tex
+% original author @RusselAndrewEdson
+
 \documentclass[
 $if(fontsize)$
   $fontsize$,
@@ -121,14 +124,14 @@ $endif$
   \fancyhf{}
   \fancyhead[R]{%
     \noindent\makebox[\textwidth][r]{%
-      \includegraphics[height=2.3cm]{assets/AAGI_logo.pdf}\hspace*{-0.5cm}}}
+      \includegraphics[height=2.3cm]{aagi_logo.pdf}\hspace*{-0.5cm}}}
   \fancyfoot[C]{%
     \rule{\textwidth}{0.4pt}\\[-10pt]
     \noindent\makebox[\textwidth]{%
       %TODO: In here: want a YAML option for 'project-partner' or something,
       % in which case we swap out the footer graphic and overlay the partner
       % logo in the right place.
-      \includegraphics[width=\paperwidth]{assets/Partners.pdf}}}
+      \includegraphics[width=\paperwidth]{partners.pdf}}}
   \renewcommand{\headrulewidth}{0pt}}
 \fancypagestyle{otherpages}{%
   \fancyhf{}
