use Proxima Nova as main font

--- a/_extensions/aagi/short_report/AAGI_short_report.tex
+++ b/_extensions/aagi/short_report/AAGI_short_report.tex
@@ -63,6 +63,10 @@ $else$
   \usepackage{lmodern}
 $endif$
 
+%Set the font
+\setmainfont{Proxima Nova}
+
+
 %TODO: more font stuff from template.latex?
 
 % use upquote if available, for straight quotes in verbatim environments
