Add in the blah ref

--- a/docs/demos/references.bib
+++ b/docs/demos/references.bib
@@ -12,4 +12,15 @@
   publisher = {Informa UK Limited},
 }
 
+@article{blah,
+  author = {Person, My},
+  journal = {My Journal},
+  number = {12},
+  pages = {pp.~12--34},
+  doi = {10.1000/182},
+  title = {My article title goes here},
+  volume = {13},
+  year = {2024}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
