--- a/docs/demos/template-pdf-report.qmd
+++ b/docs/demos/template-pdf-report.qmd
@@ -1,6 +1,6 @@
 ---
 format:
-  aagi-pdf-report: default
+  aagi-pdf+report: default
 execute: 
   echo: false
 knitr:
@@ -20,11 +20,11 @@ editor: visual
 #| label: param_uni
 
 if (params$uni == "CU") {
-  Project_Lead = "Curtin University -- Prof Mark Gibberd, Dr Julia Easton, Prof Adam Sparks"
+  project_lead = "Curtin University -- Prof Mark Gibberd, Dr Julia Easton, Prof Adam Sparks"
 } else if (params$uni == "UA") {
-  Project_Lead = "University of Adelaide -- Dr Julian Taylor, Dr Olena Kravchuck"
+  project_lead = "University of Adelaide -- Dr Julian Taylor, Dr Olena Kravchuck"
 } else {
-  Project_Lead = "University of Queensland -- Prof Scott Chapman, Emeritus Prof Kaye Basford"
+  project_lead = "University of Queensland -- Prof Scott Chapman, Emeritus Prof Kaye Basford"
 }
 ```
 
@@ -94,7 +94,7 @@ Pro_Num = params$project_num
 %    \textbf{Email:}\; \texttt{%
 %      \href{mailto:`r email`}%
 %      {`r email`}}\\[8mm]
-%    \textbf{Project Leads: `r Project_Lead`}\\[8mm]
+%    \textbf{Project Leads: `r project_lead`}\\[8mm]
       
 %    \today
 %  \end{FlushRight}
@@ -110,7 +110,7 @@ subtitle: "Descriptive title for report  \n Report for `r Pro_Num`"
 author: 
   - Adam Sparks
   - "Email: `r email`"
-  - "Project Leads: `r Project_Lead`"
+  - "Project Leads: `r project_lead`"
 ---
 
 ```{r}
