--- a/docs/demos/template-short-report.qmd
+++ b/docs/demos/template-short-report.qmd
@@ -9,7 +9,7 @@ params:
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 version-number: 1.0.0
 format: 
-  aagi-pdf-short-report: default
+  aagi-pdf+short+report: default
 ---
 
 ```{r}
