Update the file path name

--- a/_extensions/aagi/pdf-report/aagi-pdf-report-template.tex
+++ b/_extensions/aagi/pdf-report/aagi-pdf-report-template.tex
@@ -20,6 +20,7 @@
 \definecolor{aagiorange}{HTML}{ec8525}
 \definecolor{aagiblack}{HTML}{414042}
 \definecolor{aagigrey}{HTML}{f2f2f2}
+\definecolor{pagenum}{HTML}{7F7F7F}
 
 % Colour tables + long tables
 \usepackage{colortbl}
