--- a/_extensions/aagi/pdf-report/aagi-pdf-report-template.tex
+++ b/_extensions/aagi/pdf-report/aagi-pdf-report-template.tex
@@ -9,6 +9,12 @@
 \usepackage{amssymb}
 \usepackage{ragged2e}
 
+% Page layout
+\usepackage[$if(papersize)$$papersize$paper,$endif$
+left=12mm,
+right=12mm,top=22mm,
+includefoot]{geometry}
+
 % AAGI colours
 \usepackage[dvipsnames]{xcolor}
 \usepackage{graphicx}
@@ -58,11 +64,17 @@
 	enhanced, breakable}
 
 % Hyperref for links/cross-referencing
+\usepackage{hyperref}
 \def\sectionautorefname{Section}
 \def\subsectionautorefname{Subsection}
 \def\appendixautorefname{Appendix}
 \def\figureautorefname{Figure}
 \def\tableautorefname{Table}
+\hypersetup{
+	colorlinks=true,
+	linkcolor=aagiblue,
+	urlcolor=aagiteal,
+}
 
 % Formatting the headings
 \setkomafont{section}{\color{aagiteal}\huge\bfseries}
@@ -137,10 +149,6 @@ $pandoc.tex()$
   \vfill
 		
 	\end{titlepage}
-
-	\newpage
-	
-	\tableofcontents
 	
 	\newpage
 	
