fix short report so it renders on macOS

--- a/docs/demos/template-short-report.qmd
+++ b/docs/demos/template-short-report.qmd
@@ -20,7 +20,8 @@ format:
 
 # This is probably necessary on Linux (with Proxima Nova and Cairo
 # installed). We may need something else on Mac.
-if (toupper(Sys.info()["sysname"]) == "LINUX") {
+if (toupper(Sys.info()["sysname"]) == "LINUX" ||
+  toupper(Sys.info()["sysname"]) == "DARWIN") {
   knitr::opts_chunk$set(dev = c("cairo_pdf"))
 }
 
