--- a/docs/demos/template-short-report.qmd
+++ b/docs/demos/template-short-report.qmd
@@ -13,7 +13,7 @@ format:
   aagi-pdf+short+report: default
 ---
 
-```{r}
+```{r setup}
 #| include: false
 
 # library(rmarkdown)
@@ -56,7 +56,7 @@ library(AAGIThemes)
 library(AAGIPalettes)
 ```
 
-```{r}
+```{r sp}
 #| include: false
 #| label: config-for-title
 
@@ -83,12 +83,12 @@ email: "`r email`"
 # Section 1
 
 Report text goes here. This template is designed for smaller ("one-page") AAGI
-reports. The AAGI logo and partners footer appear only on this first page.
+reports.
+The AAGI logo and partners footer appear only on this first page.
 
-You can colour text/tables/etc using the various AAGI palette colours. Use 
-`\textcolor{aagiteal}{...}` for \textcolor{aagiteal}{AAGI Teal}, or 
-`\textcolor{aagibrightgreen}{...}` for 
-\textcolor{aagibrightgreen}{AAGI Bright Green}, for instance. @tbl-aagipalette shows the standard palette colours available for use.
+You can colour text/tables/etc using the various AAGI palette colours.
+Use `\textcolor{aagiteal}{...}` for `\textcolor{aagiteal}{AAGI Teal}`, or  `\textcolor{aagibrightgreen}{...}` for `\textcolor{aagibrightgreen}{AAGI Bright Green}`, for instance.
+@tbl-aagipalette shows the standard palette colours available for use.
 
 ::: {#tbl-aagipalette}
 ```{=tex}
@@ -109,15 +109,13 @@ You can colour text/tables/etc using the various AAGI palette colours. Use
 ```
 
 The AAGI palette colours.
-
 :::
 
 
 ## This is a subsection heading
 
-This is an example of a reference [@blah]. References appear at the end of the
-report by default, after the last heading `# References` on the last line of
-this .Rmd file (but feel free to change the title to whatever you like).
+This is an example of a reference [@blah].
+References appear at the end of the report by default, after the last heading `# References` on the last line of this .Rmd file (but feel free to change the title to whatever you like).
 
 \begin{note}
   {\bf\color{aagiteal!75!black} Example Note}\quad
@@ -125,9 +123,9 @@ this .Rmd file (but feel free to change the title to whatever you like).
   that stand out on the page.
 \end{note}
 
-Example R code, using the `AAGIThemes` package to produce 
-Figure \@ref(fig:example1).
-```{r}
+Example R code, using the [{AAGIThemes}](https://aagi-aus.github.io/AAGIThemes/) package to produce Figure \@ref(fig:example1).
+
+```{r plot-eg}
 #| label: fig-example1
 #| fig-cap: "Here is a plot."
 #| fig-height: 3
