--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -20,12 +20,11 @@ This will install the extension and create an example qmd file that you can use 
 For each format, there is a template file available. See:
 
 - **RevealJS:** [RevealJS Slide Demo](demos/template-revealjs.qmd) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-revealjs.qmd))
-- **AAGI PDF Short Report:** [PDF Short Report Demo](demos/template-pdf-short-report) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-pdf-report.qmd))
-- **AAGI PDF Report:** [AAGI PDF Report Demo](demos/template-pdf-report) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-pdf-report.qmd))
-- **AAGI Word Document Report:** [AAGI Word Document Demo](demos/template-docx-report) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-docx-report.qmd))
+- **AAGI PDF Short Report:** [PDF Short Report Demo](demos/template-pdf-short-report.qmd) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-pdf-report.qmd))
+- **AAGI PDF Report:** [AAGI PDF Report Demo](demos/template-pdf-report.qmd) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-pdf-report.qmd))
+- **AAGI Word Document Report:** [AAGI Word Document Demo](demos/template-docx-report.qmd) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-docx-report.qmd))
 
 
 ## Acknowledgments
 
 Thanks to [@coatless](https://github.com/coatless) for his assistance in setting up this Quarto extension.
-
