--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -24,6 +24,25 @@ For each format, there is a template file available. See:
 - **AAGI PDF Report:** [AAGI PDF Report Demo](demos/template-pdf-report+report.pdf) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-pdf-report.qmd))
 - **AAGI Word Document Report:** [AAGI Word Document Demo](demos/template-docx-report.docx) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-docx-report.qmd))
 
+## Using
+
+For documentation on using reveal.js slides in Quarto, please see,
+<https://quarto.org/docs/presentations/revealjs/>.
+
+To use the formatted output, save your qmd file into the extension folder that you created using the command above. Then, in the output format use:
+- **aggi-docx+report** for MS Word output
+- **aagi-revealjs** for a revealjs presentation
+- **aagi-pdf+report** for a full length PDF report
+- **aagi-pdf+short+report** for a short PDF report
+
+## Updating
+
+As we continue to improve this extension through bug fixes or adding new functionality, you can update it easily like so:.
+
+```bash
+cd your_quarto_project_folder
+quarto update AAGI-AUS/AAGIQuarto
+```
 
 ## Acknowledgments
 
