try full font files w/ extensions

--- a/_extensions/aagi/pdf-report/template.tex
+++ b/_extensions/aagi/pdf-report/template.tex
@@ -102,12 +102,12 @@ includefoot]{geometry}
 %Set the font
 \usepackage{fontspec}
 % Check to see if this font is installed system-wide
-\IfFontExistsTF{Proxima Nova}{%
+\IfFontExistsTF{Proxima Nova.otf}{%
 % One person has this installed system-wide
-  \setmainfont{Proxima Nova}
+  \setmainfont{proxima Nova.otf}
 }{
 % If not, load it from the file
-  \setmainfont{Arial}
+  \setmainfont{Arial.ttf}
 }
 
 %TOC entry formating
