--- a/_extensions/aagi/pdf-short-report/template.tex
+++ b/_extensions/aagi/pdf-short-report/template.tex
@@ -72,12 +72,12 @@ $endif$
 
 %Set the font
 % Check to see if this font is installed system-wide
-\IfFontExistsTF{Proxima Nova}{%
+\IfFontExistsTF{Proxima Nova.otf}{%
 % One person has this installed system-wide
-  \setmainfont{Proxima Nova}
+  \setmainfont{Proxima Nova.otf}
 }{
 % If not, load it from the file
-  \setmainfont{Arial}
+  \setmainfont{Arial.ttf}
 }
 
 
