fix caps in font name

--- a/_extensions/aagi/pdf-report/template.tex
+++ b/_extensions/aagi/pdf-report/template.tex
@@ -104,7 +104,7 @@ includefoot]{geometry}
 % Check to see if this font is installed system-wide
 \IfFontExistsTF{Proxima Nova.otf}{%
 % One person has this installed system-wide
-  \setmainfont{proxima Nova.otf}
+  \setmainfont{Proxima Nova.otf}
 }{
 % If not, load it from the file
   \setmainfont{Arial.ttf}
