Try using LuaLaTex to compile

--- a/_extensions/aagi/pdf-report/template.tex
+++ b/_extensions/aagi/pdf-report/template.tex
@@ -1,3 +1,5 @@
+% !TEX TS-program = LuaLaTeX
+
 \documentclass{scrartcl}
 
 %% Configuration %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
