--- a/_extensions/aagi/pdf-short-report/template.tex
+++ b/_extensions/aagi/pdf-short-report/template.tex
@@ -1,3 +1,5 @@
+% !TEX TS-program = LuaLaTeX
+
 % original file from https://github.com/AAGI-AUS/AAGITemplates/blob/master/inst/rmarkdown/templates/AAGI_short_report/skeleton/assets/AAGI_markdown.tex
 % original author @RusselAndrewEdson
 
