Pptx template for aagi output (#14)
Co-authored-by: Adam H. Sparks <adam.sparks@curtin.edu.au>

--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -19,10 +19,11 @@ This will install the extension and create an example qmd file that you can use 
 
 For each format, there is a template file available. See:
 
-- **RevealJS:** [AAGI RevealJS Slide Demo](demos/template-revealjs.qmd) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-revealjs.qmd))
+- **RevealJS Presentation:** [AAGI RevealJS Slide Demo](demos/template-revealjs.qmd) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-revealjs.qmd))
 - **AAGI PDF Short Report:** [AAGI PDF Short Report Demo](demos/template-pdf-short-report+short+report.pdf) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-pdf-report.qmd))
 - **AAGI PDF Report:** [AAGI PDF Report Demo](demos/template-pdf-report+report.pdf) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-pdf-report.qmd))
 - **AAGI Word Document Report:** [AAGI Word Document Demo](demos/template-docx-report.docx) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-docx-report.qmd))
+- **AAGI PowerPoint Presentation:** [AAGI PPT Slide Demo](demos/template-pptx.pptx) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-pptx.qmd))
 
 ## Using
 
@@ -31,6 +32,7 @@ For documentation on using reveal.js slides in Quarto, please see,
 
 To use the formatted output, save your qmd file into the extension folder that you created using the command above. Then, in the output format use:
 - **aggi-docx+report** for MS Word output
+- **aagi-pptx** for MS PPT output
 - **aagi-revealjs** for a revealjs presentation
 - **aagi-pdf+report** for a full length PDF report
 - **aagi-pdf+short+report** for a short PDF report
