--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -30,12 +30,15 @@ For each format, there is a template file available. See:
 For documentation on using reveal.js slides in Quarto, please see,
 <https://quarto.org/docs/presentations/revealjs/>.
 
-To use the formatted output, save your qmd file into the extension folder that you created using the command above. Then, in the output format use:
-- **aggi-docx+report** for MS Word output
-- **aagi-pptx** for MS PPT output
-- **aagi-revealjs** for a revealjs presentation
-- **aagi-pdf+report** for a full length PDF report
-- **aagi-pdf+short+report** for a short PDF report
+To use the formatted output, save your qmd file into the extension folder that you created using the command above.
+Then, in the output format use:
+
+- `aagi-docx+report`, for MS Word output
+- `aagi-pptx`, for MS PPT output
+- `aagi-revealjs`, for a revealjs presentation
+- `aagi-pdf+report`, for a full length PDF report
+- `aagi-pdf+short+report`, for a short PDF report
+
 
 ## Updating
 
