Try with \newcommand{\pandocbounded}[1]{#1}

--- a/_extensions/aagi/pdf-short-report/template.tex
+++ b/_extensions/aagi/pdf-short-report/template.tex
@@ -203,6 +203,7 @@ $if(links-as-footnotes)$
   \renewcommand{\href}[2]{#2\footnote{\protect\url{#1}}}
 $endif$
 
+\newcommand{\pandocbounded}[1]{#1}
 
 %%% Document %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
