--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -47,7 +47,7 @@ Then, in the output format use:
 
 ## Updating
 
-As we continue to improve this extension through bug fixes or adding new functionality, you can update it easily like so:.
+As we continue to improve this extension through bug fixes or adding new functionality, you can update it easily like so:
 
 ```bash
 cd your_quarto_project_folder
